--- a/src/styles/SideBar.css
+++ b/src/styles/SideBar.css
@@ -110,7 +110,7 @@ h4 {
   height: 35px;
   width: 100%;
   margin-bottom: 5px;
-  border: 1px solid #071a52;
+  border: 1px solid #46c3db;
   border-radius: 4px;
   background-color: white;
   display: flex;
@@ -119,7 +119,7 @@ h4 {
 }
 
 .marker_item > div:first-child {
-  background-color: #071a52;
+  background-color: #46c3db;
   width: 40px;
   padding: 5px;
   height: 100%;
